Fix/ the news section title is now aligned left side

--- a/src/content/pages/home/news/NewsSection.scss
+++ b/src/content/pages/home/news/NewsSection.scss
@@ -3,6 +3,10 @@
     flex-direction: column;
     gap: 20px;
 
+    &-header {
+        width: 100%;
+    }
+
     &-body {
         display: flex;
         flex-direction: row;
